--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
   - openjdk7
 
-script: mvn cobertura:cobertura coveralls:report -DrepoToken=$repoToken
+script: mvn cobertura:cobertura coveralls:report -DrepoToken=$coverallsToken
 
 deploy:
   provider: heroku
