--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   
     <build>
         <finalName>movieparser</finalName>
+        <testSourceDirectory>src/test/</testSourceDirectory>
 
         <plugins>
 
@@ -52,6 +53,12 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
             </plugin>
 
             <plugin>
