--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ge.kuku.movie.parser</groupId>
-  <artifactId>parser</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  <name>movieparser</name>
-  <url>http://maven.apache.org</url>
-  
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ge.kuku.movie.parser</groupId>
+    <artifactId>parser</artifactId>
+    <packaging>war</packaging>
+    <version>1.0</version>
+    <name>movieparser</name>
+    <url>http://maven.apache.org</url>
+
     <build>
         <finalName>movieparser</finalName>
         <testSourceDirectory>src/test/</testSourceDirectory>
@@ -104,7 +104,7 @@
 
         </dependencies>
     </dependencyManagement>
-  
+
     <dependencies>
 
         <dependency>
