--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jsoup</groupId>
