Remove `webapi` from url
Update jetty version

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>movieparser service</servlet-name>
-        <url-pattern>/webapi/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
     <listener>
