--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
                 <version>2.5.1</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.3.9.M1</version>
+                <version>9.4.0.M0</version>
                 <configuration>
                     <war>${project.basedir}/target/*.war</war>
                 </configuration>
@@ -47,6 +47,27 @@
                                     <destFileName>jetty-runner.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>unpack-zip</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                            <artifactItem>
+                              <groupId>com.newrelic.agent.java</groupId>
+                              <artifactId>newrelic-java</artifactId>
+                              <version>${newrelic.version}</version>
+                              <type>zip</type>
+                              <overWrite>true</overWrite>
+                              <outputDirectory>target</outputDirectory>
+                              <destFileName>newrelic</destFileName>
+                            </artifactItem>
+                            </artifactItems>
+                            <!-- <outputDirectory>./</outputDirectory> -->
                         </configuration>
                     </execution>
                 </executions>
@@ -149,10 +170,18 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.newrelic.agent.java</groupId>
+            <artifactId>newrelic-java</artifactId>
+            <version>${newrelic.version}</version>
+            <scope>provided</scope>
+            <type>zip</type>
+        </dependency>
     </dependencies>
     <properties>
         <jersey.version>2.22.2</jersey.version>
         <jackson.version>2.7.4</jackson.version>
+        <newrelic.version>3.30.1</newrelic.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
