--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
-  - openjdk7
+  - oraclejdk8
 
 after_success:
   - mvn cobertura:cobertura coveralls:report -DrepoToken=$coverallsToken
