--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>ge.kuku.movie.parser</groupId>
     <artifactId>parser</artifactId>
     <packaging>war</packaging>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
     <name>movieparser</name>
     <url>http://maven.apache.org</url>
     <build>
@@ -23,7 +23,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.0.M0</version>
+                <version>9.4.1.v20170120</version>
                 <configuration>
                     <war>${project.basedir}/target/*.war</war>
                 </configuration>
@@ -43,7 +43,7 @@
                                 <artifactItem>
                                     <groupId>org.eclipse.jetty</groupId>
                                     <artifactId>jetty-runner</artifactId>
-                                    <version>9.4.0.M0</version>
+                                    <version>9.4.1.v20170120</version>
                                     <destFileName>jetty-runner.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.9.1</version>
+            <version>${jsoup.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -179,9 +179,10 @@
         </dependency>
     </dependencies>
     <properties>
+        <jsoup.version>1.10.2</jsoup.version>
         <jersey.version>2.22.2</jersey.version>
         <jackson.version>2.7.4</jackson.version>
-        <newrelic.version>3.30.1</newrelic.version>
+        <newrelic.version>3.35.1</newrelic.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
